--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,52 @@
 
 :root {
---primary-text-color: #757575;
---title-text-color: #212121;
---accent-color: #2196F3;
---background-color: #FFFFFF;
---second-background-color: #F5F4FA;
---contact-color: rgba(255, 255, 255, 0.6);
---color-logo: #000000;
---background-color-hero: #2F303A;
---button-main-hover: #188CE8;
+    --primary-text-color: #757575;
+    --title-text-color: #212121;
+    --accent-color: #2196F3;
+    --background-color: #FFFFFF;
+    --second-background-color: #F5F4FA;
+    --contact-color: rgba(255, 255, 255, 0.6);
+    --color-logo: #000000;
+    --background-color-hero: #2F303A;
+    --button-main-hover: #188CE8;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--primary-text-color);
     background-color: var(--background-color);
-    }
+}
 
 /* header */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.page-header {
+    padding-top: 24px;
+    display: flex;
+}
+
+.main-nav {
+    display: flex;
+    align-items: center;
+}
+
+.container {
+    width: 1230px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    outline: 2px solid tomato;
+}
 
 .logo {
     color: var(--color-logo);
@@ -27,6 +56,10 @@ body {
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
+    padding-bottom: 25px;
+    padding-top: 24px;
+    display: flex;
+
 }
 
 .logo-down {
@@ -37,15 +70,44 @@ body {
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
+
 }
+
 .logo-blue {
     color: var(--accent-color);
+
 }
 
-ul {list-style: none;
+.navigate,
+.cont-top {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: flex;
+
 }
+
+.navigate {
+    margin-left: 93px;
+}
+
+.cont-top {
+    margin-left: auto;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.item:not(:last-child) {
+    margin-right: 50px;
+
+}
+
 
 .nav-link {
+    display: block;
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -75,17 +137,35 @@ ul {list-style: none;
 
 /* main */
 
-.hero, .footer {background-color: var(--background-color-hero);
+.hero,
+.footer {
+    background-color: var(--background-color-hero);
+}
+
+.hero {
+    text-align: center;
+
+    outline: 2px solid tomato;
 }
 
 .title {
     color: var(--background-color);
     font-weight: 900;
     font-size: 44px;
-    line-height: 1.36;    
-    text-align: center;
+    line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    margin-bottom: 30px;
+    padding-top: 200px;
+
+
+
+
+}
+
+.section {
+    padding-top: 94px;
+
 }
 
 .title-link {
@@ -95,12 +175,14 @@ ul {list-style: none;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-bottom: 10px;
 }
 
 .text-site {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    margin-top: 10px;
 }
 
 .title-name {
@@ -109,12 +191,21 @@ ul {list-style: none;
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    }
+    padding-bottom: 50px;
+    text-align: center;
+}
+
+/* our prioritets */
+
+
+
 
 /* our team */
 
 .team {
     background-color: var(--second-background-color);
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .back {
@@ -123,6 +214,7 @@ ul {list-style: none;
 
 .team-background {
     background-color: var(--background-color);
+    margin-top: 30px;
 }
 
 .name {
@@ -131,17 +223,24 @@ ul {list-style: none;
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
-    }
+}
 
-    /* button */
+/* button */
 
 .button {
+    text-align: center;
+    display: inline-block;
+    border-radius: 4px;
     color: var(--title-text-color);
     background-color: var(--second-background-color);
     border-color: transparent;
 }
 
 .button.main {
+    padding: 10px 32px;
+    min-width: 216px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: var(--background-color);
     background-color: var(--accent-color);
     font-family: 'Roboto', sans-serif;
@@ -149,7 +248,8 @@ ul {list-style: none;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
-    }
+    margin-bottom: 200px;
+}
 
 .button.secondary {
     color: var(--title-text-color);
@@ -158,20 +258,28 @@ ul {list-style: none;
     font-size: 16px;
     line-height: 1.62;
     letter-spacing: 0.03em;
-    }
+    padding: 6px 22px;
+    min-width: 73px;
+}
 
-.button.main:hover, .button.main:focus {
+.button.main:hover,
+.button.main:focus {
     cursor: pointer;
     background-color: var(--button-main-hover);
 }
 
-.button.secondary:hover, .button.secondary:focus {
+.button.secondary:hover,
+.button.secondary:focus {
     cursor: pointer;
     color: var(--background-color);
     background-color: var(--accent-color);
 }
 
 /* footer */
+
+.footer {
+    padding-top: 60px;
+}
 
 .place {
     color: var(--background-color);
@@ -180,7 +288,7 @@ ul {list-style: none;
     line-height: 1.71;
     letter-spacing: 0.03em;
     text-decoration: none;
- }
+}
 
 .contacts {
     color: var(--contact-color);
@@ -189,7 +297,12 @@ ul {list-style: none;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
- }
+}
+
+.address {
+    margin-top: 20px;
+    padding-bottom: 60px;
+}
 
 .contacts:hover,
 .contacts:focus,
@@ -222,11 +335,72 @@ ul {list-style: none;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
- }
+    margin-top: 20px;
+}
 
- .text-photo {
+.text-photo {
     color: var(--primary-text-color);
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
- }
+    margin-top: 4px;
+}
+
+.photo-link {
+    padding-top: 50px;
+    padding-bottom: 94px;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.flex-element {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.flex-element:nth-child(3n) {
+    margin-right: 0;
+}
+
+.sec-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.sec-btn,
+.btn:not(:last-child) {
+    margin-right: 8px;
+
+}
+
+.flex-cont {
+    display: flex;
+
+}
+
+.size {
+    width: 270px;
+    margin-right: 30px;
+}
+
+.size:nth-child(4n) {
+    margin-right: 0;
+
+    .picture {
+        display: flex;
+        margin-right: 30px;
+        flex-direction: row;
+    }
+
+    .picture-element:nth-child(3n) {
+        margin-right: 0;
+    }
+
+    .picture-element {}
