--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,7 @@ ul {
     line-height: 1.71;
     letter-spacing: 0.03em;
     margin-top: 10px;
+    text-align: center;
 }
 
 .title-name {
@@ -227,6 +228,7 @@ ul {
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
+    text-align: center;
 }
 
 /* button */
